smtlib.output
Terminals unused in grammar

    TK_CMM


State 58 conflicts: 5 shift/reduce
State 59 conflicts: 1 shift/reduce
State 60 conflicts: 4 shift/reduce
State 64 conflicts: 4 shift/reduce


Grammar

    0 $accept: smtlib $end

    1 primary_expression: TK_ID
    2                   | TK_CT

    3 postfix_expression: primary_expression
    4                   | postfix_expression TK_LSQB expression TK_RSQB

    5 unary_operator: TK_MI_OP

    6 unary_expression: postfix_expression
    7                 | unary_operator unary_expression

    8 operator: TK_PL_OP
    9         | TK_MI_OP
   10         | TK_MU_OP
   11         | TK_DI_OP
   12         | TK_MO_OP

   13 expression: unary_expression
   14           | expression operator expression

   15 assignment_expression: unary_expression TK_ASS_OP expression
   16                      | TK_LB assignment_expression TK_RB

   17 relational_operator: TK_LT_OP
   18                    | TK_GT_OP
   19                    | TK_LE_OP
   20                    | TK_GE_OP
   21                    | TK_EQ_OP
   22                    | TK_NE_OP
   23                    | TK_ASS_OP

   24 primary_conditional_expression: expression relational_operator expression

   25 logical_operator: TK_AND_OP
   26                 | TK_OR_OP
   27                 | TK_IMP_OP
   28                 | TK_EQ_OP

   29 conditional_expression: primary_conditional_expression
   30                       | TK_NOT_OP conditional_expression
   31                       | conditional_expression logical_operator conditional_expression
   32                       | TK_LB conditional_expression TK_RB

   33 assignment_statement: assignment_expression TK_ST_END

   34 assignments: assignment_statement
   35            | assignment_statement assignments

   36 mixed_statements: assignments
   37                 | decision
   38                 | assignments mixed_statements
   39                 | decision mixed_statements

   40 innerblock: assignment_statement
   41           | decision
   42           | TK_LP mixed_statements TK_RP

   43 decision: TK_IF conditional_expression innerblock
   44         | TK_IF conditional_expression innerblock TK_ELSE innerblock

   45 assertions: assignment_statement
   46           | assignment_statement assertions
   47           | decision
   48           | decision assertions

   49 smtlib: assertions


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    TK_MU_OP (258) 10
    TK_DI_OP (259) 11
    TK_MO_OP (260) 12
    TK_NOT_OP (261) 30
    TK_AND_OP (262) 25
    TK_OR_OP (263) 26
    TK_LT_OP <TK_simple_t> (264) 17
    TK_IMP_OP (265) 27
    TK_GT_OP <TK_simple_t> (266) 18
    TK_ID <TK_identifier_t> (267) 1
    TK_CT <TK_literal_t> (268) 2
    TK_CMM <TK_simple_t> (269)
    TK_LB (270) 16 32
    TK_LP (271) 42
    TK_RB (272) 16 32
    TK_LE_OP <TK_simple_t> (273) 19
    TK_GE_OP <TK_simple_t> (274) 20
    TK_EQ_OP <TK_simple_t> (275) 21 28
    TK_IF <TK_simple_t> (276) 43 44
    TK_ELSE <TK_simple_t> (277) 44
    TK_ST_END (278) 33
    TK_LSQB <TK_simple_t> (279) 4
    TK_RSQB <TK_simple_t> (280) 4
    TK_RP (281) 42
    TK_PL_OP (282) 8
    TK_MI_OP (283) 5 9
    TK_NE_OP <TK_simple_t> (284) 22
    TK_ASS_OP <TK_simple_t> (285) 15 23


Nonterminals, with rules where they appear

    $accept (31)
        on left: 0
    primary_expression <NT_exp_t> (32)
        on left: 1 2
        on right: 3
    postfix_expression <NT_exp_t> (33)
        on left: 3 4
        on right: 4 6
    unary_operator <NT_exp_t> (34)
        on left: 5
        on right: 7
    unary_expression <NT_exp_t> (35)
        on left: 6 7
        on right: 7 13 15
    operator <NT_exp_t> (36)
        on left: 8 9 10 11 12
        on right: 14
    expression <NT_exp_t> (37)
        on left: 13 14
        on right: 4 14 15 24
    assignment_expression <NT_exp_t> (38)
        on left: 15 16
        on right: 16 33
    relational_operator <NT_exp_t> (39)
        on left: 17 18 19 20 21 22 23
        on right: 24
    primary_conditional_expression <NT_exp_t> (40)
        on left: 24
        on right: 29
    logical_operator <NT_exp_t> (41)
        on left: 25 26 27 28
        on right: 31
    conditional_expression <NT_exp_t> (42)
        on left: 29 30 31 32
        on right: 30 31 32 43 44
    assignment_statement <NT_exp_t> (43)
        on left: 33
        on right: 34 35 40 45 46
    assignments <NT_exp_t> (44)
        on left: 34 35
        on right: 35 36 38
    mixed_statements <NT_exp_t> (45)
        on left: 36 37 38 39
        on right: 38 39 42
    innerblock <NT_exp_t> (46)
        on left: 40 41 42
        on right: 43 44
    decision <NT_exp_t> (47)
        on left: 43 44
        on right: 37 39 41 47 48
    assertions <NT_exp_t> (48)
        on left: 45 46 47 48
        on right: 46 48 49
    smtlib (49)
        on left: 49
        on right: 0


State 0

    0 $accept: . smtlib $end

    TK_ID     shift, and go to state 1
    TK_CT     shift, and go to state 2
    TK_LB     shift, and go to state 3
    TK_IF     shift, and go to state 4
    TK_MI_OP  shift, and go to state 5

    primary_expression     go to state 6
    postfix_expression     go to state 7
    unary_operator         go to state 8
    unary_expression       go to state 9
    assignment_expression  go to state 10
    assignment_statement   go to state 11
    decision               go to state 12
    assertions             go to state 13
    smtlib                 go to state 14


State 1

    1 primary_expression: TK_ID .

    $default  reduce using rule 1 (primary_expression)


State 2

    2 primary_expression: TK_CT .

    $default  reduce using rule 2 (primary_expression)


State 3

   16 assignment_expression: TK_LB . assignment_expression TK_RB

    TK_ID     shift, and go to state 1
    TK_CT     shift, and go to state 2
    TK_LB     shift, and go to state 3
    TK_MI_OP  shift, and go to state 5

    primary_expression     go to state 6
    postfix_expression     go to state 7
    unary_operator         go to state 8
    unary_expression       go to state 9
    assignment_expression  go to state 15


State 4

   43 decision: TK_IF . conditional_expression innerblock
   44         | TK_IF . conditional_expression innerblock TK_ELSE innerblock

    TK_NOT_OP  shift, and go to state 16
    TK_ID      shift, and go to state 1
    TK_CT      shift, and go to state 2
    TK_LB      shift, and go to state 17
    TK_MI_OP   shift, and go to state 5

    primary_expression              go to state 6
    postfix_expression              go to state 7
    unary_operator                  go to state 8
    unary_expression                go to state 18
    expression                      go to state 19
    primary_conditional_expression  go to state 20
    conditional_expression          go to state 21


State 5

    5 unary_operator: TK_MI_OP .

    $default  reduce using rule 5 (unary_operator)


State 6

    3 postfix_expression: primary_expression .

    $default  reduce using rule 3 (postfix_expression)


State 7

    4 postfix_expression: postfix_expression . TK_LSQB expression TK_RSQB
    6 unary_expression: postfix_expression .

    TK_LSQB  shift, and go to state 22

    $default  reduce using rule 6 (unary_expression)


State 8

    7 unary_expression: unary_operator . unary_expression

    TK_ID     shift, and go to state 1
    TK_CT     shift, and go to state 2
    TK_MI_OP  shift, and go to state 5

    primary_expression  go to state 6
    postfix_expression  go to state 7
    unary_operator      go to state 8
    unary_expression    go to state 23


State 9

   15 assignment_expression: unary_expression . TK_ASS_OP expression

    TK_ASS_OP  shift, and go to state 24


State 10

   33 assignment_statement: assignment_expression . TK_ST_END

    TK_ST_END  shift, and go to state 25


State 11

   45 assertions: assignment_statement .
   46           | assignment_statement . assertions

    TK_ID     shift, and go to state 1
    TK_CT     shift, and go to state 2
    TK_LB     shift, and go to state 3
    TK_IF     shift, and go to state 4
    TK_MI_OP  shift, and go to state 5

    $default  reduce using rule 45 (assertions)

    primary_expression     go to state 6
    postfix_expression     go to state 7
    unary_operator         go to state 8
    unary_expression       go to state 9
    assignment_expression  go to state 10
    assignment_statement   go to state 11
    decision               go to state 12
    assertions             go to state 26


State 12

   47 assertions: decision .
   48           | decision . assertions

    TK_ID     shift, and go to state 1
    TK_CT     shift, and go to state 2
    TK_LB     shift, and go to state 3
    TK_IF     shift, and go to state 4
    TK_MI_OP  shift, and go to state 5

    $default  reduce using rule 47 (assertions)

    primary_expression     go to state 6
    postfix_expression     go to state 7
    unary_operator         go to state 8
    unary_expression       go to state 9
    assignment_expression  go to state 10
    assignment_statement   go to state 11
    decision               go to state 12
    assertions             go to state 27


State 13

   49 smtlib: assertions .

    $default  reduce using rule 49 (smtlib)


State 14

    0 $accept: smtlib . $end

    $end  shift, and go to state 28


State 15

   16 assignment_expression: TK_LB assignment_expression . TK_RB

    TK_RB  shift, and go to state 29


State 16

   30 conditional_expression: TK_NOT_OP . conditional_expression

    TK_NOT_OP  shift, and go to state 16
    TK_ID      shift, and go to state 1
    TK_CT      shift, and go to state 2
    TK_LB      shift, and go to state 17
    TK_MI_OP   shift, and go to state 5

    primary_expression              go to state 6
    postfix_expression              go to state 7
    unary_operator                  go to state 8
    unary_expression                go to state 18
    expression                      go to state 19
    primary_conditional_expression  go to state 20
    conditional_expression          go to state 30


State 17

   32 conditional_expression: TK_LB . conditional_expression TK_RB

    TK_NOT_OP  shift, and go to state 16
    TK_ID      shift, and go to state 1
    TK_CT      shift, and go to state 2
    TK_LB      shift, and go to state 17
    TK_MI_OP   shift, and go to state 5

    primary_expression              go to state 6
    postfix_expression              go to state 7
    unary_operator                  go to state 8
    unary_expression                go to state 18
    expression                      go to state 19
    primary_conditional_expression  go to state 20
    conditional_expression          go to state 31


State 18

   13 expression: unary_expression .

    $default  reduce using rule 13 (expression)


State 19

   14 expression: expression . operator expression
   24 primary_conditional_expression: expression . relational_operator expression

    TK_MU_OP   shift, and go to state 32
    TK_DI_OP   shift, and go to state 33
    TK_MO_OP   shift, and go to state 34
    TK_LT_OP   shift, and go to state 35
    TK_GT_OP   shift, and go to state 36
    TK_LE_OP   shift, and go to state 37
    TK_GE_OP   shift, and go to state 38
    TK_EQ_OP   shift, and go to state 39
    TK_PL_OP   shift, and go to state 40
    TK_MI_OP   shift, and go to state 41
    TK_NE_OP   shift, and go to state 42
    TK_ASS_OP  shift, and go to state 43

    operator             go to state 44
    relational_operator  go to state 45


State 20

   29 conditional_expression: primary_conditional_expression .

    $default  reduce using rule 29 (conditional_expression)


State 21

   31 conditional_expression: conditional_expression . logical_operator conditional_expression
   43 decision: TK_IF conditional_expression . innerblock
   44         | TK_IF conditional_expression . innerblock TK_ELSE innerblock

    TK_AND_OP  shift, and go to state 46
    TK_OR_OP   shift, and go to state 47
    TK_IMP_OP  shift, and go to state 48
    TK_ID      shift, and go to state 1
    TK_CT      shift, and go to state 2
    TK_LB      shift, and go to state 3
    TK_LP      shift, and go to state 49
    TK_EQ_OP   shift, and go to state 50
    TK_IF      shift, and go to state 4
    TK_MI_OP   shift, and go to state 5

    primary_expression     go to state 6
    postfix_expression     go to state 7
    unary_operator         go to state 8
    unary_expression       go to state 9
    assignment_expression  go to state 10
    logical_operator       go to state 51
    assignment_statement   go to state 52
    innerblock             go to state 53
    decision               go to state 54


State 22

    4 postfix_expression: postfix_expression TK_LSQB . expression TK_RSQB

    TK_ID     shift, and go to state 1
    TK_CT     shift, and go to state 2
    TK_MI_OP  shift, and go to state 5

    primary_expression  go to state 6
    postfix_expression  go to state 7
    unary_operator      go to state 8
    unary_expression    go to state 18
    expression          go to state 55


State 23

    7 unary_expression: unary_operator unary_expression .

    $default  reduce using rule 7 (unary_expression)


State 24

   15 assignment_expression: unary_expression TK_ASS_OP . expression

    TK_ID     shift, and go to state 1
    TK_CT     shift, and go to state 2
    TK_MI_OP  shift, and go to state 5

    primary_expression  go to state 6
    postfix_expression  go to state 7
    unary_operator      go to state 8
    unary_expression    go to state 18
    expression          go to state 56


State 25

   33 assignment_statement: assignment_expression TK_ST_END .

    $default  reduce using rule 33 (assignment_statement)


State 26

   46 assertions: assignment_statement assertions .

    $default  reduce using rule 46 (assertions)


State 27

   48 assertions: decision assertions .

    $default  reduce using rule 48 (assertions)


State 28

    0 $accept: smtlib $end .

    $default  accept


State 29

   16 assignment_expression: TK_LB assignment_expression TK_RB .

    $default  reduce using rule 16 (assignment_expression)


State 30

   30 conditional_expression: TK_NOT_OP conditional_expression .
   31                       | conditional_expression . logical_operator conditional_expression

    $default  reduce using rule 30 (conditional_expression)

    logical_operator  go to state 51


State 31

   31 conditional_expression: conditional_expression . logical_operator conditional_expression
   32                       | TK_LB conditional_expression . TK_RB

    TK_AND_OP  shift, and go to state 46
    TK_OR_OP   shift, and go to state 47
    TK_IMP_OP  shift, and go to state 48
    TK_RB      shift, and go to state 57
    TK_EQ_OP   shift, and go to state 50

    logical_operator  go to state 51


State 32

   10 operator: TK_MU_OP .

    $default  reduce using rule 10 (operator)


State 33

   11 operator: TK_DI_OP .

    $default  reduce using rule 11 (operator)


State 34

   12 operator: TK_MO_OP .

    $default  reduce using rule 12 (operator)


State 35

   17 relational_operator: TK_LT_OP .

    $default  reduce using rule 17 (relational_operator)


State 36

   18 relational_operator: TK_GT_OP .

    $default  reduce using rule 18 (relational_operator)


State 37

   19 relational_operator: TK_LE_OP .

    $default  reduce using rule 19 (relational_operator)


State 38

   20 relational_operator: TK_GE_OP .

    $default  reduce using rule 20 (relational_operator)


State 39

   21 relational_operator: TK_EQ_OP .

    $default  reduce using rule 21 (relational_operator)


State 40

    8 operator: TK_PL_OP .

    $default  reduce using rule 8 (operator)


State 41

    9 operator: TK_MI_OP .

    $default  reduce using rule 9 (operator)


State 42

   22 relational_operator: TK_NE_OP .

    $default  reduce using rule 22 (relational_operator)


State 43

   23 relational_operator: TK_ASS_OP .

    $default  reduce using rule 23 (relational_operator)


State 44

   14 expression: expression operator . expression

    TK_ID     shift, and go to state 1
    TK_CT     shift, and go to state 2
    TK_MI_OP  shift, and go to state 5

    primary_expression  go to state 6
    postfix_expression  go to state 7
    unary_operator      go to state 8
    unary_expression    go to state 18
    expression          go to state 58


State 45

   24 primary_conditional_expression: expression relational_operator . expression

    TK_ID     shift, and go to state 1
    TK_CT     shift, and go to state 2
    TK_MI_OP  shift, and go to state 5

    primary_expression  go to state 6
    postfix_expression  go to state 7
    unary_operator      go to state 8
    unary_expression    go to state 18
    expression          go to state 59


State 46

   25 logical_operator: TK_AND_OP .

    $default  reduce using rule 25 (logical_operator)


State 47

   26 logical_operator: TK_OR_OP .

    $default  reduce using rule 26 (logical_operator)


State 48

   27 logical_operator: TK_IMP_OP .

    $default  reduce using rule 27 (logical_operator)


State 49

   42 innerblock: TK_LP . mixed_statements TK_RP

    TK_ID     shift, and go to state 1
    TK_CT     shift, and go to state 2
    TK_LB     shift, and go to state 3
    TK_IF     shift, and go to state 4
    TK_MI_OP  shift, and go to state 5

    primary_expression     go to state 6
    postfix_expression     go to state 7
    unary_operator         go to state 8
    unary_expression       go to state 9
    assignment_expression  go to state 10
    assignment_statement   go to state 60
    assignments            go to state 61
    mixed_statements       go to state 62
    decision               go to state 63


State 50

   28 logical_operator: TK_EQ_OP .

    $default  reduce using rule 28 (logical_operator)


State 51

   31 conditional_expression: conditional_expression logical_operator . conditional_expression

    TK_NOT_OP  shift, and go to state 16
    TK_ID      shift, and go to state 1
    TK_CT      shift, and go to state 2
    TK_LB      shift, and go to state 17
    TK_MI_OP   shift, and go to state 5

    primary_expression              go to state 6
    postfix_expression              go to state 7
    unary_operator                  go to state 8
    unary_expression                go to state 18
    expression                      go to state 19
    primary_conditional_expression  go to state 20
    conditional_expression          go to state 64


State 52

   40 innerblock: assignment_statement .

    $default  reduce using rule 40 (innerblock)


State 53

   43 decision: TK_IF conditional_expression innerblock .
   44         | TK_IF conditional_expression innerblock . TK_ELSE innerblock

    TK_ELSE  shift, and go to state 65

    $default  reduce using rule 43 (decision)


State 54

   41 innerblock: decision .

    $default  reduce using rule 41 (innerblock)


State 55

    4 postfix_expression: postfix_expression TK_LSQB expression . TK_RSQB
   14 expression: expression . operator expression

    TK_MU_OP  shift, and go to state 32
    TK_DI_OP  shift, and go to state 33
    TK_MO_OP  shift, and go to state 34
    TK_RSQB   shift, and go to state 66
    TK_PL_OP  shift, and go to state 40
    TK_MI_OP  shift, and go to state 41

    operator  go to state 44


State 56

   14 expression: expression . operator expression
   15 assignment_expression: unary_expression TK_ASS_OP expression .

    TK_MU_OP  shift, and go to state 32
    TK_DI_OP  shift, and go to state 33
    TK_MO_OP  shift, and go to state 34
    TK_PL_OP  shift, and go to state 40
    TK_MI_OP  shift, and go to state 41

    $default  reduce using rule 15 (assignment_expression)

    operator  go to state 44


State 57

   32 conditional_expression: TK_LB conditional_expression TK_RB .

    $default  reduce using rule 32 (conditional_expression)


State 58

   14 expression: expression . operator expression
   14           | expression operator expression .

    TK_MU_OP  shift, and go to state 32
    TK_DI_OP  shift, and go to state 33
    TK_MO_OP  shift, and go to state 34
    TK_PL_OP  shift, and go to state 40
    TK_MI_OP  shift, and go to state 41

    TK_MU_OP  [reduce using rule 14 (expression)]
    TK_DI_OP  [reduce using rule 14 (expression)]
    TK_MO_OP  [reduce using rule 14 (expression)]
    TK_PL_OP  [reduce using rule 14 (expression)]
    TK_MI_OP  [reduce using rule 14 (expression)]
    $default  reduce using rule 14 (expression)

    operator  go to state 44


State 59

   14 expression: expression . operator expression
   24 primary_conditional_expression: expression relational_operator expression .

    TK_MU_OP  shift, and go to state 32
    TK_DI_OP  shift, and go to state 33
    TK_MO_OP  shift, and go to state 34
    TK_PL_OP  shift, and go to state 40
    TK_MI_OP  shift, and go to state 41

    TK_MI_OP  [reduce using rule 24 (primary_conditional_expression)]
    $default  reduce using rule 24 (primary_conditional_expression)

    operator  go to state 44


State 60

   34 assignments: assignment_statement .
   35            | assignment_statement . assignments

    TK_ID     shift, and go to state 1
    TK_CT     shift, and go to state 2
    TK_LB     shift, and go to state 3
    TK_MI_OP  shift, and go to state 5

    TK_ID     [reduce using rule 34 (assignments)]
    TK_CT     [reduce using rule 34 (assignments)]
    TK_LB     [reduce using rule 34 (assignments)]
    TK_MI_OP  [reduce using rule 34 (assignments)]
    $default  reduce using rule 34 (assignments)

    primary_expression     go to state 6
    postfix_expression     go to state 7
    unary_operator         go to state 8
    unary_expression       go to state 9
    assignment_expression  go to state 10
    assignment_statement   go to state 60
    assignments            go to state 67


State 61

   36 mixed_statements: assignments .
   38                 | assignments . mixed_statements

    TK_ID     shift, and go to state 1
    TK_CT     shift, and go to state 2
    TK_LB     shift, and go to state 3
    TK_IF     shift, and go to state 4
    TK_MI_OP  shift, and go to state 5

    $default  reduce using rule 36 (mixed_statements)

    primary_expression     go to state 6
    postfix_expression     go to state 7
    unary_operator         go to state 8
    unary_expression       go to state 9
    assignment_expression  go to state 10
    assignment_statement   go to state 60
    assignments            go to state 61
    mixed_statements       go to state 68
    decision               go to state 63


State 62

   42 innerblock: TK_LP mixed_statements . TK_RP

    TK_RP  shift, and go to state 69


State 63

   37 mixed_statements: decision .
   39                 | decision . mixed_statements

    TK_ID     shift, and go to state 1
    TK_CT     shift, and go to state 2
    TK_LB     shift, and go to state 3
    TK_IF     shift, and go to state 4
    TK_MI_OP  shift, and go to state 5

    $default  reduce using rule 37 (mixed_statements)

    primary_expression     go to state 6
    postfix_expression     go to state 7
    unary_operator         go to state 8
    unary_expression       go to state 9
    assignment_expression  go to state 10
    assignment_statement   go to state 60
    assignments            go to state 61
    mixed_statements       go to state 70
    decision               go to state 63


State 64

   31 conditional_expression: conditional_expression . logical_operator conditional_expression
   31                       | conditional_expression logical_operator conditional_expression .

    TK_AND_OP  shift, and go to state 46
    TK_OR_OP   shift, and go to state 47
    TK_IMP_OP  shift, and go to state 48
    TK_EQ_OP   shift, and go to state 50

    TK_AND_OP  [reduce using rule 31 (conditional_expression)]
    TK_OR_OP   [reduce using rule 31 (conditional_expression)]
    TK_IMP_OP  [reduce using rule 31 (conditional_expression)]
    TK_EQ_OP   [reduce using rule 31 (conditional_expression)]
    $default   reduce using rule 31 (conditional_expression)

    logical_operator  go to state 51


State 65

   44 decision: TK_IF conditional_expression innerblock TK_ELSE . innerblock

    TK_ID     shift, and go to state 1
    TK_CT     shift, and go to state 2
    TK_LB     shift, and go to state 3
    TK_LP     shift, and go to state 49
    TK_IF     shift, and go to state 4
    TK_MI_OP  shift, and go to state 5

    primary_expression     go to state 6
    postfix_expression     go to state 7
    unary_operator         go to state 8
    unary_expression       go to state 9
    assignment_expression  go to state 10
    assignment_statement   go to state 52
    innerblock             go to state 71
    decision               go to state 54


State 66

    4 postfix_expression: postfix_expression TK_LSQB expression TK_RSQB .

    $default  reduce using rule 4 (postfix_expression)


State 67

   35 assignments: assignment_statement assignments .

    $default  reduce using rule 35 (assignments)


State 68

   38 mixed_statements: assignments mixed_statements .

    $default  reduce using rule 38 (mixed_statements)


State 69

   42 innerblock: TK_LP mixed_statements TK_RP .

    $default  reduce using rule 42 (innerblock)


State 70

   39 mixed_statements: decision mixed_statements .

    $default  reduce using rule 39 (mixed_statements)


State 71

   44 decision: TK_IF conditional_expression innerblock TK_ELSE innerblock .

    $default  reduce using rule 44 (decision)
